<resources>
    <string name="app_name">TagAlarm</string>
    <string name="noti_content">You must wake up and dismiss the alarm.</string>
    <string name="alert_title">Wake up pls!</string>
    <string name="alert_dismiss">Dismiss</string>
    <string name="alarmitem_repeat">Repeat:</string>
    <string name="alarmitem_repeat_no">(Only once)</string>
    <string name="alarmitem_pow_add">Add requirement for dismiss&#8230;</string>
    <string name="alarmitem_pow_add_more">Add another&#8230;</string>
    <string name="AlarmItem_test_text">Test alarm&#8230;</string>
    <string name="alert_direct_dismiss">Dismiss right away</string>
    <string name="alert_direct_dismiss_description">( Because you started this alarm as a test. Used
        when you discovered that you have no way to dismiss it with proof-of-wake. Won\'t show when it really goes off. )</string>
    <string name="alert_failure_msg">Failed to load proofs. Using fallback.</string>

    <string-array name="dow_checkbox">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string name="AlarmItem_pow_desc">In order to close the alarm, you need to do any of:</string>

    <string-array name="pow_types">
        <!-- Index starts from zero -->
        <item />
        <!-- TYPE_SHAKE -->
        <item>Shake phone %1$d times, difficulty %2$d/5.</item>
        <!-- TYPE_QRCODE -->
        <item>Scan a QR code</item>
        <!-- TYPE_MATH -->
        <item>Work out arithmetic problems</item>
        <!-- TYPE_LOCATION -->
        <item>Allow dismiss if you are not at home</item>
        <!-- TYPE_WAIT -->
        <item>Wait %1$s minutes.</item>
    </string-array>
    <string-array name="pow_types_name">
        <!-- TYPE_SHAKE - 1 -->
        <item>Shake phone</item>
        <!-- TYPE_QRCODE - 1 -->
        <item>Scan a QR code</item>
        <!-- TYPE_MATH - 1 -->
        <item>Work out arithmetic problems</item>
        <!-- TYPE_LOCATION - 1 -->
        <item>Allow dismiss if you are not at home</item>
        <!-- TYPE_WAIT - 1 -->
        <item>Wait a period of time.</item>
    </string-array>

    <string name="powconfig_shake_title">Shake phone</string>
    <string name="powconfig_wait_title">Wait</string>

    <string name="set">Set</string>

    <string name="powconfig_add">Add Requirement for Dismiss</string>
    <string name="powconfig_shake_amount">Numbers of shake needed:</string>
    <string name="powconfig_set_difficulty">Set difficulty</string>
    <string name="powconfig_current_shake_difficulty">Current difficulty: %1$d/5</string>
    <string name="powconfig_wait_minutes">Minutes required:</string>

    <string name="powstuff_wait">This thing will end in %1$d seconds&#8230;</string>
</resources>
