<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/powconfig_dialog_view">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:labelFor="@+id/powconfig_shake_amount"
            android:text="@string/powconfig_shake_amount" />
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_gravity="end|center_vertical"
            android:gravity="end"
            android:id="@+id/powconfig_shake_amount" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/powconfig_set_difficulty"
            android:text="@string/powconfig_set_difficulty" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/powconfig_current_shake_difficulty"
            android:id="@+id/powconfig_current_shake_difficulty" />
    </LinearLayout>
</LinearLayout>