<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/alarmitem_sublayout">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/alarmitem_time"
                style="@style/AlarmItem_Time"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end">
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/alarmitem_switch" />
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/alarmitem_delete"
                    android:padding="5dp"
                    android:src="@drawable/rubbishbin"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    style="@style/clickable" />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="7"
                android:stretchColumns="*"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/alarmitem_dowtable"
                style="@style/AlarmItem_MoreInfo">
                <TableRow>
                    <FrameLayout
                        android:layout_span="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/alarmitem_repeat" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:id="@+id/alarmitem_repeat_no"
                            android:text="@string/alarmitem_repeat_no" />
                    </FrameLayout>
                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/alarmitem_dowtable_row"/>
                <!-- Stuff will be added programmatically here. -->
            </TableLayout>
            <TextView
                style="@style/AlarmItem_Pow_Desc"
                android:id="@+id/alarmitem_pow_list_desc"
                android:text="@string/AlarmItem_pow_desc" />
            <LinearLayout
                style="@style/AlarmItem_Pow_List"
                android:id="@+id/alarmitem_pow_list" />
            <LinearLayout
                android:id="@+id/alarmitem_addpow"
                style="@style/AlarmItem_Pow_Add">
                <ImageView
                    style="@style/AlarmItem_Pow_Add_Image"
                    android:contentDescription="@string/alarmitem_pow_add"
                    android:src="@drawable/icon" />
                <TextView
                    android:text="@string/alarmitem_pow_add"
                    style="@style/AlarmItem_Pow_Add_Text"
                    android:id="@+id/alarmitem_pow_add_text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/alarmitem_test"
                style="@style/AlarmItem_Pow_Add">
                <ImageView
                    style="@style/AlarmItem_Pow_Add_Image"
                    android:contentDescription="@string/alarmitem_pow_add"
                    android:src="@drawable/icon" />
                <TextView
                    android:text="@string/AlarmItem_test_text"
                    style="@style/AlarmItem_Pow_Add_Text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>